# ecommerce-platform

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  logs.txt
.github/: dependabot.yml
.github/workflows/: admin-ui.yml  api.yml  ci.yml  user-ui.yml
admin-ui/: Dockerfile  next.config.ts  package-lock.json  package.json
admin-ui/src/: proxy.ts
api/: .dockerignore  .env.docker  .env.example  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt  setup.cfg
api/apps/account/: admin.py  models.py  serializers.py  tokens.py  urls.py  views.py
api/apps/account/migrations/: 0001_initial.py
api/apps/basket/: admin.py  apps.py  models.py  service.py  urls.py  views.py
api/apps/core/: email.py  exceptions.py  permissions.py  urls.py  views.py
api/apps/core/management/commands/: seed_db.py
api/apps/orders/: admin.py  admin_views.py  models.py  serializers.py  urls.py  views.py
api/apps/orders/migrations/: 0001_initial.py
api/apps/payment/: admin.py  models.py  urls.py  views.py
api/apps/payment/migrations/: 0001_initial.py
api/apps/store/: admin.py  admin_views.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
api/apps/store/migrations/: 0001_initial.py
api/config/: urls.py
api/config/settings/: __init__.py  base.py  development.py  local.py  production.py
api/templates/emails/: activation.html  base.html  order_confirmation.html  password_reset.html
k8s/: deploy.sh  namespace.yaml
nginx/: Dockerfile  nginx.conf
user-ui/: Dockerfile  next.config.ts  package-lock.json  package.json
(+77 files in other folders)
