[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ecommerce-api"
version = "1.0.0"
description = "E-Commerce Platform REST API"
requires-python = ">=3.13"

[tool.black]
line-length = 120
target-version = ["py313"]
exclude = '''
/(
    \.git
  | \.venv
  | migrations
  | staticfiles
)/
'''

[tool.isort]
profile = "black"
line_length = 120
known_django = ["django"]
known_third_party = ["rest_framework", "rest_framework_simplejwt", "corsheaders", "drf_spectacular", "django_filters", "django_countries", "stripe", "celery"]
known_first_party = ["apps", "config"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRD_PARTY", "FIRST_PARTY", "LOCALFOLDER"]
skip = ["migrations"]
